--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "d3": "^6.5.0",
     "vue": "^3.0.5"
   },
   "devDependencies": {
+    "@types/d3": "^6.3.0",
     "@vitejs/plugin-vue": "^1.1.2",
     "@vue/compiler-sfc": "^3.0.5",
     "@vuedx/typecheck": "^0.6.0",
